[project]
name = "scratch"
version = "0.1.0"
description = "ML from scratch"

authors = [
    { name = "Nick Wall", email = "46641379+walln@users.noreply.github.com" },
]
dependencies = [
    "flax>=0.9.1",
    "torch>=2.5.1",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "numpy>=1.26.4",
    "optax>=0.2.5",
    "tqdm>=4.66.6",
    "equinox>=0.11.9",
    "orbax>=0.1.9",
    "wandb>=0.18.7",
    "jax-metrics>=0.2.5",
    "typer>=0.15.1",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "jmp>=0.0.4",
    "datasets>=3.1.0",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.12"

[dependency-groups]
cuda = ["jax[cuda12]>=0.4.35"]
metal = ["jax-metal>=0.1.0"]
cpu = ["jax[cpu]>=0.4.35"]
dev = [
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "nvitop>=1.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ruff>=0.8.4",
    "ty>=0.0.1a10",

]

[tool.uv]
default-groups = ["dev", "cpu"]
conflicts = [[{ group = "cuda" }, { group = "metal" }]]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scratch"]

[tool.ruff]
target-version = "py312"
include = ["src/**", "tests/**"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "I",      # isort
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
    "FBT001", # flake8-boolean-trap
]
ignore = ["F722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    'error',
    'ignore:co_lnotab is deprecated, use co_lines instead.',
    'ignore:To copy construct from a tensor, it is recommended to use sourceTensor\.clone\(\)\.detach\(\) or sourceTensor\.clone\(\)\.detach\(\)\.requires_grad_\(True\):UserWarning',
]
